syntax = "proto3";

package stage;

message Stage {
  string id = 1;
  string title = 2;
  string description = 3;
}

message CreateStageRequest {
  Stage stage = 1;
}

message CreateStageResponse {
  Stage stage = 1;
}

message ReadStageRequest {
  string stage_id = 1;
}

message ReadStageResponse {
  Stage stage = 1;
}

message UpdateStageRequest {
  Stage stage = 1;
}

message UpdateStageResponse {
  Stage stage = 1;
}

message DeleteStageRequest {
  string stage_id = 1;
}

message DeleteStageResponse {
  bool success = 1;
}

service StageService {
  rpc CreateStage(CreateStageRequest) returns (CreateStageResponse);
  rpc ReadStage(ReadStageRequest) returns (ReadStageResponse);
  rpc UpdateStage(UpdateStageRequest) returns (UpdateStageResponse);
  rpc DeleteStage(DeleteStageRequest) returns (DeleteStageResponse);
}
